--- a/Curs 4/Data upload/client_upload.html
+++ b/Curs 4/Data upload/client_upload.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <form action="http://localhost:3000/uploadedfiles" enctype="multipart/form-data" method="POST">
-        <input type="file" name="Upload your file" id="">
+    <form action="http://localhost:3000/upload/" enctype="multipart/form-data" method="post">
+        <input type="file" name="myFile" id="">
         <input type="submit" value="Submit file">
     </form>
 
-    <script>
 
+    <script>    
     </script>
 </body>
 </html>
